--- a/build.xml
+++ b/build.xml
@@ -8,7 +8,7 @@
 
 	<target name="compile">
 		<mkdir dir="bin" />
-		<javac srcdir="src" destdir="bin" classpathref="classpath" />
+		<javac srcdir="src" destdir="bin" />
 	</target>
 	
 	<target name="jar" depends="compile">
